# googletest-cmake-example

./: .pre-commit-config.yaml  CMakeLists.txt
.github/workflows/: ci.yml
src/: CMakeLists.txt  ClassA.cpp  ClassA.h  ClassB.cpp  ClassB.h  ClassB.hpp
test/: ClassATest.cpp  ClassBTest.cpp  main.cpp
